Git now will ignore .conf files(for NGINX)

--- a/myEskak/mynginx.conf
+++ b/myEskak/mynginx.conf
@@ -1,10 +1,11 @@
+# Reverse Proxy Loopback(This is required to run this Django WebApplication utilizing the NGINX web server)
 server {
-    listen 80;
+    listen 80; # NO-SSL(I generally use Cloudflare ...(1) Generate Origin Certificate, (2) Configure SSL Certificate on Server and, (3) Setup Proxy on Cloudflare dashboard)
     server_name myeskak.local;
 
     location / {
-        proxy_pass http://127.0.0.1:8000;  # Adjust to your Django app's hostname and port
+        proxy_pass http://127.0.0.1:8000; 
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Real-IP $remote_addr;  # cool.
     }
 }
