--- a/myEskak/Dockerfile.nginx
+++ b/myEskak/Dockerfile.nginx
@@ -1,5 +1,5 @@
-# Use an official Nginx image as the base image
+# Nginx image as the base image
 FROM nginx:latest
 
-# Copy your custom Nginx configuration file into the container
+# Copies custom Nginx configuration file into the container
 COPY mynginx.conf /etc/nginx/conf.d/default.conf
